kubectl_deploy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-umar-dev-app-name
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-umar-dev-app-name
    spec:
      containers:
      - name: hello-umar-dev-container-name
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/form-builder/umar-dev:latest
        ports:
        - containerPort: 3000
